k8s/environments/logging/elk/kibana/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: egov-msa
  labels:
    env: production
    tier: logging
    app: kibana
    name: kibana-ingress
spec:
  rules:
    - host: <ELK Kibana 도메인> # TODO
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kibana
                port:
                  number: 5601
